# kirakiraichigo-mendix-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js
.claude/: settings.local.json
.claude/skills/add-component/: SKILL.md
.claude/skills/add-i18n/: SKILL.md
.claude/skills/add-tauri-command/: SKILL.md
.claude/skills/build-check/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/migrate-to-rust/: SKILL.md
.claude/skills/widget-dev-patterns/: SKILL.md
public/fonts/: OFL-MapleMono.txt  OFL.txt  README.md
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/build_deploy/: mod.rs  transform.rs  types.rs
src-tauri/src/business_logic/: mod.rs  property_group.rs
src-tauri/src/business_logic/array_ops/: property.rs
src-tauri/src/business_logic/theme/: mod.rs
src-tauri/src/business_logic/validation/: mod.rs  selection.rs  widget.rs
src-tauri/src/config/: mod.rs
src-tauri/src/data_processing/: extractors.rs  mendix_filters.rs  mod.rs  version_utils.rs  widget.rs
src-tauri/src/editor_config_parser/: mod.rs  runtime.rs  transformer.rs  types.rs  utils.rs
src-tauri/src/formatting/: mod.rs
src-tauri/src/js_runtime/: collection_ops.rs  event_helpers.rs  mod.rs
src-tauri/src/mendix/: execution.rs  mod.rs  models.rs  paths.rs  scanner.rs
src-tauri/src/package_manager/: executor.rs  mod.rs  powershell.rs  strategy.rs  widget_operations.rs
src-tauri/src/package_manager/strategies/: direct_command.rs  direct_node.rs  fnm_simple.rs  mod.rs  powershell_fnm.rs  powershell_simple.rs
src-tauri/src/state/: mod.rs  selection.rs  version_operations.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/validation/: mod.rs
src-tauri/src/web_scraper/: browser.rs  config.rs  download.rs  mod.rs  parsing.rs
src-tauri/src/widget_loader/: mod.rs
src-tauri/src/widget_parser/: mod.rs
src-tauri/src/widget_preview/: bundle.rs  metadata.rs  mod.rs
src/atoms/: apps.js  buildDeploy.js  collection.js  index.js  modals.js  theme.js  versions.js  widgetForm.js  widgetPreview.js
src/components/common/: AppHeader.jsx  ConfirmModal.jsx  Dropdown.jsx  DynamicPropertyInput.jsx  FilterCheckbox.jsx  ListItem.jsx  ListItems.jsx  LoadMoreIndicator.jsx  LoadingIndicator.jsx  ObjectListItem.jsx  ObjectListPropertyInput.jsx  PackageManagerSelector.jsx  Panel.jsx  PropertyInput.jsx  SearchBox.jsx  TabButton.jsx  WidgetListItem.jsx  WidgetPreviewFrame.jsx  index.js
src/components/functional/: index.js  styles.css
src/components/modals/: AppModals.jsx  BuildResultModal.jsx  DownloadModal.css  index.js  (+2 more)
src/contexts/: AppContext.jsx  BuildDeployContext.jsx  ModalContext.jsx  VersionsContext.jsx  WidgetCollectionContext.jsx  WidgetContext.jsx  WidgetFormContext.jsx  WidgetPreviewContext.jsx  index.js
src/hooks/: index.js  useAppDeleteModal.js  useAppInitialization.js  useApps.js  useBackendState.js  useBuildDeploy.js  useCollection.js  useContextValues.js  useDownloadModal.js  useModals.js  usePreviewBuild.js  useResultModal.js  useTheme.js  useUninstallModal.js  useValidation.js  useVersionFiltering.js  useVersions.js  useWidgetDeleteModal.js  useWidgetForm.js  useWidgetModal.js  useWidgetPreview.js  useWidgetProperties.js  useWidgets.js
src/i18n/: index.js  useI18n.js
src/lib/: swr.js
src/schemas/: apiResponseSchemas.js  configSchemas.js  index.js  widgetFormSchemas.js  widgetPropertySchemas.js
src/styles/: index.css
src/utils/: async.js  constants.js  dataProcessing.js  editorConfigParser.js  eventHelpers.js  functional.js  index.js  setUtils.js  storage.js  validation.js  versionState.js  widgetHelpers.js
(+88 files in other folders)
