[package]
name = "KiraIchi"
version = "0.3.2"
description = "Magical Mendix management tool for Studio Pro version control, widget development, and deployment. Sparkle your way through Mendix development!"
authors = ["GG-O-BP"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kirakiraichigo_mendix_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "5"
quick-xml = "0.36"
rc-zip = "5.3.1"
rc-zip-sync = "4.3.0"
chromiumoxide = "0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
scraper = "0.17"
