[package]
name = "KiraIchi"
version = "0.4.4"
description = "Magical Mendix management tool for Studio Pro version control, widget development, and deployment. Sparkle your way through Mendix development!"
authors = ["GG-O-BP"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kirakiraichigo_mendix_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "6"
quick-xml = "0.39"
chromiumoxide = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
scraper = "0.25"
reqwest = { version = "0.13", features = ["stream"] }
rayon = "1.11"
semver = "1"
tauri-plugin-os = "2"
boa_engine = "0.21.0"
